@@ -4,6 +4,9 @@ Changes in version 0.08
 - Reordered some things in bcron-exec to provide error emails more often
   when jobs fail to run because of system errors.
 
+- bcron-update internally strips slashes from paths to prevent problems
+  with doubled or trailing slashes in arguments.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
